# the-bulwark

./: .eslintrc.json  .gitignore  .npmignore  CLAUDE.md  Justfile  README.md  Rules.md  package-lock.json  package.json  starter-prompt.md  tsconfig.json
.claude/: settings.json
.claude-plugin/: plugin.json
agents/: bulwark-fix-validator.md  bulwark-issue-analyzer.md
docs/: AT-v-SequentialTask-comparison.md  P4-defects.md  architecture.md  bug-magnet-data-synthesis.md  claude-code-task-persistence-guide.md  code-review-synthesis.md  fw-observations.md  headless-agent-invocation.md  p4-synthesis.md  p4.3-4-research.md  repo-split-instructions.md  rules-reasoning.md  timestamp-standardization.md
hooks/: hooks.json
logs/: diagnostic-test-findings.md  p2-architecture-research-20260124-210233.md  p2-invocation-research-20260125-020301.md  p2-usage-research-20260124-210252.md  test-validator-20260111-113707.yaml
plans/: active_tasks.yaml  defects.md  references.md  tasks.yaml  tasks_completed.yaml  the-bulwark-plan.md
scripts/: claude-project  init-project-rules.sh  init-rules.sh  init.sh  sync-essential-skills.sh  sync-hooks-for-dev.sh
sessions/: session_10_20260118.md  session_11_20260118.md  session_12_20260119.md  session_13_20260119.md  session_14_20260119.md  session_15_20260119.md  session_16_20260119.md  session_17_20260120.md  session_18_20260124.md  session_19_20260124.md  (+84 more)
tests/fixtures/actix-server/: Cargo.toml
tests/fixtures/actix-server/src/: main.rs
tests/fixtures/flask-service/: pyproject.toml
tests/fixtures/flask-service/src/: main.py
(+357 files in other folders)
