[package]
name = "actix-server"
version = "1.0.0"
edition = "2021"
description = "Actix web server"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-rt = "2"

[profile.release]
opt-level = 3
lto = true
